add warranty for downhole

--- a/terms.html
+++ b/terms.html
@@ -16,7 +16,8 @@ permalink: /terms
     <div class="row">
       <div class="col-sm-7 padding-tb-30">
         <h4>Products sold by seller are designed and intended to be used at high pressures and speeds, and may be dangerous if operated improperly or without the use of appropriate safety devices and guards. Buyer is cautioned to carefully read and understand these terms and conditions, as they have important legal consequences.</h4>
-        <h3><a href="/warranty"><i class="fa fa-chevron-circle-right"></i> Review warranty information</a></h3>
+        <h3><a href="/warranty"><i class="fa fa-chevron-circle-right"></i> Review warranty for waterblast and sewer tools</a></h3>
+        <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for SpinCat and Downhole Tools</a></h3>
       </div>
     </div>
     <div class="row">
