--- a/warranty-dh.html
+++ b/warranty-dh.html
@@ -2,12 +2,12 @@
 layout: default
 page-type: page
 title: StoneAge Limited Warranty
-permalink: /warranty
+permalink: /warranty-dh
 ---
 
 <div class="fluid-container landing-nav">
   <div class="container">
-    <h1 class="page-heading">StoneAge Limited Warranty</h1>
+    <h1 class="page-heading">StoneAge Limited Warranty for SpinCat and Downhole tools</h1>
   </div>
 </div>
 
@@ -15,9 +15,9 @@ permalink: /warranty
   <div class="container">
     <div class="row">
       <div class="col-sm-7 padding-tb-30">
-        <h4>Warranties set forth herein extend only to End-Users, meaning customers acquiring, or that have previously acquired, a product manufactured by StoneAge (“Product”) for their own use and not for resale, either directly from StoneAge Inc. (“StoneAge”) or from a StoneAge Authorized Dealer or Reseller (“Dealer”).  No warranty of any kind or nature is made by StoneAge beyond those expressly stated herein.</h4>
+        <h4>Warranties set forth herein extend only to End-Users, meaning customers acquiring, or that have previously acquired, a product manufactured by StoneAge (“Product”) for their own use and not for resale, either directly from StoneAge Inc. (“StoneAge”) or from a StoneAge Authorized Dealer or Reseller (“Dealer”). No warranty of any kind or nature is made by StoneAge beyond those expressly stated herein.</h4>
         <h3><a href="/terms"><i class="fa fa-chevron-circle-right"></i> Review Terms &amp; Conditions of Sale</a></h3>
-        <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for SpinCat and Downhole Tools</a></h3>
+        <h3><a href="/warranty"><i class="fa fa-chevron-circle-right"></i> Review warranty for waterblast and sewer tools</a></h3>
       </div>
     </div>
     <div class="row">
@@ -40,7 +40,7 @@ permalink: /warranty
       <div class="row" id="period">
         <div class="col-sm-7 term small">
           <h2>Limited warranty period</h2>
-          <p>Subject to the limitations and conditions hereinafter set forth, StoneAge warrants its Product to be free from defects in workmanship and material for a period of one (1) year from the date of purchase by the End-User, provided that the end of the limited warranty period shall not be later than eighteen (18) months from the date of shipment of the Product to the Dealer or the End-User by StoneAge (“Limited Warranty Period”).  All replacement parts which are furnished under this Limited Warranty and properly installed shall be warranted to the same extent as the original Product under this Limited Warranty if, and only if, the original parts were found to be defective within the original Limited Warranty Period covering the original Product.  Replacement parts are warranted for the remainder of the original Limited Warranty Period.  This Limited Warranty does not cover any component part of any Product not manufactured by StoneAge.  Any such component part is subject exclusively to the component manufacturer’s warranty terms and conditions.</p>
+          <p>Subject to the limitations and conditions hereinafter set forth, StoneAge warrants its Product to be free from defects in workmanship and material for a period of ninety (90) days from the date of purchase by the End-User, provided that the end of the limited warranty period shall not be later than six (6) months from the date of shipment of the Product to the Dealer or the End-User by StoneAge (“Limited Warranty Period”).  All replacement parts which are furnished under this Limited Warranty and properly installed shall be warranted to the same extent as the original Product under this Limited Warranty if, and only if, the original parts were found to be defective within the original Limited Warranty Period covering the original Product.  Replacement parts are warranted for the remainder of the original Limited Warranty Period.  This Limited Warranty does not cover any component part of any Product not manufactured by StoneAge.  Any such component part is subject exclusively to the component manufacturer’s warranty terms and conditions.</p>
         </div>
       </div>
       <div class="row" id="coverage">
@@ -102,8 +102,8 @@ permalink: /warranty
         <div class="col-sm-7 small">
           <h2>Limitation of liability</h2>
           <p>End-User specifically acknowledges that the Product may be operated at high speeds and/or pressures, and that as such it may be inherently dangerous if not used correctly.  End-User shall familiarize itself with all operation materials provided by StoneAge and shall at all times use and require its agents, employees and contractors to use all necessary and appropriate safety devices, guards and proper safe operating procedures.  In no event shall StoneAge be responsible for any injuries to persons or property caused directly or indirectly by the operation of the Product if End-User or any agent, employee, or contractor of End-User:  (1) fails to use all necessary and appropriate safety devices, guards and proper safe operating procedures; (2) fails to maintain in good working order such safety devices and guards; (3) alters or modifies the Product in any way not approved by StoneAge in advance in writing; (4)  allows the Product to be operated under more severe conditions or beyond the rated capacity specified for the Product; or (5) otherwise negligently operates the Product.    End-User shall indemnify and hold StoneAge harmless from any and all liability or obligation incurred by or against StoneAge, including costs and attorneys’ fees, to or by any person so injured.</p>
-          <p>TO THE FULL EXTENT ALLOWED BY APPLICABLE LAW, STONEAGE SHALL NOT BE LIABLE FOR ANY INDIRECT, SPECIAL, INCIDENTAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES (INCLUDING WITHOUT LIMITATION, LOSS OF PROFITS, LOSS OF GOODWILL, DIMINUTION OF VALUE, WORK STOPPAGE, INTERRUPTION OF BUSINESS, RENTAL OF SUBSTITUTE PRODUCT, OR OTHER COMMERCIAL LOSS EVEN TO THE EXTENT SUCH DAMAGES WOULD CONSTITUTE DIRECT DAMAGES), WITH RESPECT TO THE COVERED STONEAGE PRODUCT, OR OTHERWISE IN CONNECTION WITH THIS LIMITED WARRANTY, REGARDLESS OF WHETHER STONEAGE HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. </p>
-          <p>IT IS UNDERSTOOD THAT STONEAGE’S LIABILITY, WHETHER IN CONTRACT, IN TORT, UNDER ANY WARRANTY, IN NEGLIGENCE, OR OTHERWISE SHALL NOT EXCEED THE AMOUNT OF THE PURCHASE PRICE PAID BY THE END-USER FOR THE PRODUCT.  STONEAGE’S MAXIMUM LIABILITY SHALL NOT EXCEED, AND END-USER’S REMEDY IS LIMITED TO EITHER (1) REPAIR OR REPLACEMENT OF THE DEFECTIVE WORKMANSHIP OR MATERIAL OR, AT STONEAGE’S OPTION, (2) REFUND OF THE PURCHASE PRICE, OR (3) ISSUANCE OF A CREDIT FOR THE PURCHASE PRICE, AND SUCH REMEDIES SHALL BE END-USER’S ENTIRE AND EXCLUSIVE REMEDY. </p>
+          <p>TO THE FULL EXTENT ALLOWED BY APPLICABLE LAW, STONEAGE SHALL NOT BE LIABLE FOR ANY INDIRECT, SPECIAL, INCIDENTAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES (INCLUDING WITHOUT LIMITATION, LOSS OF PROFITS, LOSS OF GOODWILL, DIMINUTION OF VALUE, WORK STOPPAGE, INTERRUPTION OF BUSINESS, RENTAL OF SUBSTITUTE PRODUCT, OR OTHER COMMERCIAL LOSS EVEN TO THE EXTENT SUCH DAMAGES WOULD CONSTITUTE DIRECT DAMAGES), WITH RESPECT TO THE COVERED STONEAGE PRODUCT, OR OTHERWISE IN CONNECTION WITH THIS LIMITED WARRANTY, REGARDLESS OF WHETHER STONEAGE HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.</p>
+          <p>IT IS UNDERSTOOD THAT STONEAGE’S LIABILITY, WHETHER IN CONTRACT, IN TORT, UNDER ANY WARRANTY, IN NEGLIGENCE, OR OTHERWISE SHALL NOT EXCEED THE AMOUNT OF THE PURCHASE PRICE PAID BY THE END-USER FOR THE PRODUCT.  STONEAGE’S MAXIMUM LIABILITY SHALL NOT EXCEED, AND END-USER’S REMEDY IS LIMITED TO EITHER (1) REPAIR OR REPLACEMENT OF THE DEFECTIVE WORKMANSHIP OR MATERIAL OR, AT STONEAGE’S OPTION, (2) REFUND OF THE PURCHASE PRICE, OR (3) ISSUANCE OF A CREDIT FOR THE PURCHASE PRICE, AND SUCH REMEDIES SHALL BE END-USER’S ENTIRE AND EXCLUSIVE REMEDY.</p>
           <p>YOU, THE END-USER, UNDERSTAND AND EXPRESSLY AGREE THAT THE FOREGOING LIMITATIONS ON LIABILITY ARE PART OF THE CONSIDERATION IN THE PRICE OF THE STONEAGE PRODUCT YOU PURCHASED. </p>
           <p>Some jurisdictions do not allow the limitation or exclusion of liability for certain damages, so the above limitations and exclusions may not apply to you.  This Limited Warranty gives you specific legal rights, and you may also have other rights which vary from jurisdiction to jurisdiction.  If any provisions of this Limited Warranty is held to be invalid or unenforceable, such invalidity or unenforceability shall not affect the validity or enforceability of the other portions hereof.</p>
         </div>
