--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@ permalink: /
     <div class="section-heading">
       <h2>Events</h2>
     </div>
+    <div class="row margin-bottom-30">
+      <img src="/assets/img/thumb/upcoming-events-customer-appreciation-day.jpg" class="img-responsive"/ alt="StoneAge Louisiana Customer Appreciation Day">
+      <div class="caption">
+        <h4><a href="/louisiana">StoneAge Louisiana Customer Appreciation<br><span class="small gray">May 4th, 2017<br/>
+          11:00 am - 2:00 pm<br/><em>Click for directions</em></span></a></h4>
+      </div>
+    </div>
     <div class="row">
       <a href="http://rokatech.de/" target="_blank"><img src="/assets/img/thumb/upcoming-event-ro-ka-tech.gif" class="img-responsive"/ alt="Visit StoneAge at Ro-Ka-Tech 2017"></a>
       <div class="caption" style="padding-top:15px;">
