--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -107,8 +107,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Pipe Size</th>
-                  <td>6-36 in.</td>
-                  <td><span class="metric">152-914 cm</span>
+                  <td>8-36 in.</td>
+                  <td><span class="metric">203-914 mm</span>
                 </tr>
                 <tr>
                   <th>Pressure Range</th>
