misc updates and fixes

--- a/loc-la.html
+++ b/loc-la.html
@@ -67,11 +67,10 @@ contact-la: yes
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Bill Shires</strong><br/>
-              Regional Sales Manager<br/>
-              Office: +1 (970) 403-1419<br/>
-              Mobile: +1 (970) 903-4218
-            <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a></p>
+            <p><strong>John Graham</strong><br/>
+              Southeast/Northeast Regional Sales Manager<br/>
+              Main: +1 (225) 264-4935
+            <a href="mailto:John.Graham@stoneagetools.com">john.graham@stoneagetools.com</a></p>
           </div>
         </div>
 
