--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -72,11 +72,10 @@ contact-ohio: yes
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Bill Shires</strong><br/>
-              Regional Sales Manager<br/>
-              Office: +1 (970) 403-1419<br/>
-              Mobile: +1 (970) 903-4218
-            <a href="mailto:bill.shires@stoneagetools.com">bill.shires@stoneagetools.com</a></p>
+            <p><strong>Sean Baker</strong><br/>
+              Midwest/Canada Regional Sales Manager<br/>
+              Main: +1 (440) 661-0022
+            <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a></p>
           </div>
         </div>
 
