--- a/request-catalog.html
+++ b/request-catalog.html
@@ -38,7 +38,7 @@ permalink: /request-catalog
       </a>
     </div>
     <div class="row margin-bottom-30">
-      <a href=product-catalogs.html><img src="assets/img/catalog_cover_sewer_2016.jpg" class="img-responsive" alt="2016 StoneAge Warthog Sewer Catalog">
+      <a href=product-catalogs.html><img src="assets/img/catalog_cover_sewer_2017-18.jpg" class="img-responsive" alt="2017-2018 StoneAge Warthog Sewer Catalog">
       </a>
     </div>
   </div>
