manual updates plus misc

--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -57,7 +57,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The AutoStroke AST-200 is designed to increase efficiency of AutoBox ABX-2l and ABX-3L in applications with plugged heat exchanger tubes.</p>
+      <p class="product-description">The AutoStroke AST-200 is designed to increase efficiency of AutoBox ABX-2L and ABX-3L in applications with plugged heat exchanger tubes.</p>
       <p>The AutoStroke senses when a Banshee nozzle has hit a plug and activates an automatic forward and reverse pecking motion that allows the jets to effectively break through obstructions without operator intervention. This produces optimal cleaning and saves wear on your Banshee tools.</p>
       
       <h2>Features</h2>
@@ -169,7 +169,7 @@ master-slider: yes
             <a href="#" data-featherlight="/assets/vid/vids.html #ast-vid">
               <img src="assets/vid/thumb/ast-vid.png" alt="AutoStroke exchanger cleaning accessory video" class="img-responsive" />
             </a>
-            <p class="caption">AutoStroke Overview</p>
+            <p class="caption">AutoStroke Overview<br>(AST-100-2L)</p>
           </div>
         </div>
       </section>
