--- a/waterblast-automation/cable-swivel-tool.html
+++ b/waterblast-automation/cable-swivel-tool.html
@@ -241,7 +241,7 @@ master-slider: yes
         <h5>BFW-100</h5></a>
       </div>
       <div class="item">
-        <a href="/cst-air"><img class="img-responsive" src="/assets/img/product/thumb-yellow-jacket-02.jpg" alt="Yellow Jacket online boiler and furnace cleaning">
+        <a href="/yellow-jacket"><img class="img-responsive" src="/assets/img/product/thumb-yellow-jacket-02.jpg" alt="Yellow Jacket online boiler and furnace cleaning">
         <h5>Yellow Jacket</h5></a>
       </div>
       <div class="item">
