--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -28,17 +28,21 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-07.jpg" alt="Fin fan cooler cleaning kit">
-            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-08.jpg" alt="Fin fan cooler cleaning kit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-08.jpg" alt="thumb">
 <!--              <a data-type="video" href="https://www.youtube.com/embed/geLBK4Tuj_M"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-06.jpg" alt="Fin fan cooler cleaning kit">
-            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-06.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-09.jpg" alt="Fin fan cooler cleaning kit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-09.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-05.jpg" alt="Fin fan cooler cleaning kit">
-            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-05.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-10.jpg" alt="Fin fan cooler cleaning kit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-10.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-11.jpg" alt="Fin fan cooler cleaning kit">
+            <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-11.jpg" alt="thumb">
           </div>
         </div>
       </div>
