--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -69,8 +69,8 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The HCS-3L and HCS-2L Hose Containment Systems are lightweight accessories for the AutoBox family of hose tractors that contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
-      <p>Hose Containment Systems are simple to setup and operate, and greatly increase job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. Hose Containment Systems increase hose life by reducing wear and make it easy to store and transport hoses between jobs.</p>
+      <p class="product-description">The Hose Containment System is a lightweight accessory for the AutoBox family of cleaning systems that contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
+      <p>The Hose Containment System is simple to setup and operate, and greatly increases job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. It also increases hose life by reducing wear and makes it easy to store and transport hoses between jobs.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
