--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -146,12 +146,14 @@ master-slider: yes
           </ul>
         </div>
         <div class="col-sm-4">
-<!--
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/BB-100_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Bundle Blaster Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Data Sheet</a></li>
+            <li><a href="/assets/pdf/data-sheets/ABX-3L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Data Sheet</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-2L Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/ABX-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoBox ABX-3L Tool Talk</a></li>
           </ul>
--->
+            <p>The Lightweight Positioner is an accessory product for the AutoBox family of hose tractors. Usage details can be found in documentation for AutoBox products.</p>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
           <h3>Need Support?</h3>
