--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -459,17 +459,17 @@ landing: yes
         
         <div class="mix exchanger-cleaning accessories" data-name="fin-fan">
           <a href="/fin-fan-accessory" class="search-text">
-            <img src="/assets/img/product/fin-fan-06.jpg" class="img-responsive" />
+            <img src="/assets/img/product/fin-fan-08.jpg" class="img-responsive" />
             <h3>Fin Fan<br>Accessory</h3>
-            <h5>For AutoBox ABX-2L</h5>
+            <h5>For AutoBox systems</h5>
             <table class="table">
               <tbody>
                 <tr>
-                  <th colspan="2" style="text-align:center;">Adapts the ABX–2L for cleaning Fin Fan style exchangers</th>
+                  <th colspan="2" style="text-align:center;">Adapts AutoBox tractors for cleaning Fin Fan style exchangers</th>
                 </tr>
                 <tr>
                   <th>Hose Size</th>
-                  <td>3/2-8/4</td>
+                  <td>3/4-8/4</td>
                 </tr>
               </tbody>
             </table>
@@ -523,7 +523,7 @@ landing: yes
           <a href="/hose-containment" class="search-text">
             <img src="/assets/img/product/hcs-01.jpg" class="img-responsive" />
             <h3>Hose<br>Containment</h3>
-            <h5>For AutoBox ABX-2L</h5>
+            <h5>For AutoBox ABX-2L &amp; ABX-3L</h5>
             <table class="table">
               <tbody>
                 <tr>
