--- a/index.html
+++ b/index.html
@@ -114,18 +114,20 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row margin-bottom-30">
-      <img src="/assets/img/thumb/upcoming-events-customer-appreciation-day.jpg" class="img-responsive"/ alt="StoneAge Louisiana Customer Appreciation Day">
-      <div class="caption">
-        <h4><a href="/louisiana">StoneAge Louisiana Customer Appreciation<br><span class="small gray">May 4th, 2017<br/>
-          11:00 am - 2:00 pm<br/><em>Click for directions</em></span></a></h4>
-      </div>
-    </div>
-    <div class="row">
       <a href="http://rokatech.de/" target="_blank"><img src="/assets/img/thumb/upcoming-event-ro-ka-tech.gif" class="img-responsive"/ alt="Visit StoneAge at Ro-Ka-Tech 2017"></a>
       <div class="caption" style="padding-top:15px;">
         <h4><a href="http://rokatech.de/" target="_blank">Ro-Ka-Tech 2017<br>International Trade Fair for Pipe and Sewer Technology<br><span class="small">May 10-12<br/>
         Kassel, Germany</span></a></h4>
         <p><strong>Visit Us in H5/A13-1</strong></p>
+      </div>
+    </div>
+    <div class="row">
+      <a href="http://www.fuelethanolworkshop.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW_2017_02.JPG" class="img-responsive"/ alt="Visit StoneAge at FEW Show 2017"></a>
+      <div class="caption">
+        <h4><a href="http://www.fuelethanolworkshop.com/" target="_blank">International Fuel Ethanol Workshop &amp; Expo<br><span class="small">June 19-21<br/>
+        Minneapolis, Minnesota</span></a></h4>
+        <p><strong>Visit Us in Booth 301</strong></p>
+        <p>Now in its 33rd year, the FEW provides the ethanol industry with cutting-edge content and unparalleled networking opportunities in a dynamic business-to-business environment.</p>
       </div>
     </div>
   </div>
