--- a/manuals.html
+++ b/manuals.html
@@ -363,10 +363,10 @@ permalink: /manuals
               </tr>
               <tr>
                 <td><a href="/hose-containment">HCS-3L</a></td>
-                <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-2L &nbsp; ABX-3L</td>
+                <td>HOSE CONTAINMENT SYSTEM<br>For AutoBox ABX-3L &nbsp; ABX-3L</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank" class="btn btn-sm">PL 615</a></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
-                <td class="text-center"></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/HCS-3L_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
