--- a/index.html
+++ b/index.html
@@ -113,15 +113,16 @@ permalink: /
     <div class="section-heading">
       <h2>Events</h2>
     </div>
-    <div class="row margin-bottom-30">
-      <a href="http://rokatech.de/" target="_blank"><img src="/assets/img/thumb/upcoming-event-ro-ka-tech.gif" class="img-responsive"/ alt="Visit StoneAge at Ro-Ka-Tech 2017"></a>
-      <div class="caption" style="padding-top:15px;">
-        <h4><a href="http://rokatech.de/" target="_blank">Ro-Ka-Tech 2017<br>International Trade Fair for Pipe and Sewer Technology<br><span class="small">May 10-12<br/>
-        Kassel, Germany</span></a></h4>
-        <p><strong>Visit Us in H5/A13-1</strong></p>
+    <div class="row">
+      <a href="https://canadianminingexpo.com" target="_blank"><img src="/assets/img/thumb/upcoming-event-ca-mining-2017.png" class="img-responsive"/ alt="Visit StoneAge at the Canadian Mining Expo 2017"></a>
+      <div class="caption">
+        <h4><a href="https://canadianminingexpo.com" target="_blank">Canadian Mining Expo<br><span class="small">May 31-June 1<br/>
+        Timmins, Ontario</span></a></h4>
+        <p><strong>Visit Us in Booths 0-04 &amp; 0-05</strong></p>
+        <p>Visit StoneAge at <a href="http://www.jjei.com/" target="_blank">Joe Johnson Equipment</a>'s outdoor booths for tool demos!</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="padding-top:20px;">
       <a href="http://www.fuelethanolworkshop.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW_2017_02.JPG" class="img-responsive"/ alt="Visit StoneAge at FEW Show 2017"></a>
       <div class="caption">
         <h4><a href="http://www.fuelethanolworkshop.com/" target="_blank">International Fuel Ethanol Workshop &amp; Expo<br><span class="small">June 19-21<br/>
