WB dealer updates

--- a/rentals.html
+++ b/rentals.html
@@ -71,25 +71,32 @@ master-slider: yes
     <h2 class="slab bold spaced margin-bottom-30" style="font-size:30px;">Contact a rental facility near you</h2>
     <div class="row">
       <div class="col-sm-3">
-        <h5 class="bold slab">Houston Area</h5>
-        <p>Pasadena, TX<br>
+        <h5 class="bold slab" style="text-transform:uppercase;">Houston Area</h5>
+        <p><strong>StoneAge Houston</strong><br>
+          Pasadena, TX<br>
           +1 (281) 888-5069<br>
           <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
       </div>
       <div class="col-sm-3">
-        <h5 class="bold slab">Louisiana</h5>
-        <p>Geismar, LA<br>
+        <h5 class="bold slab" style="text-transform:uppercase;">Louisiana</h5>
+        <p><strong>StoneAge Louisiana</strong><br>
+          Geismar, LA<br>
           +1 (225) 508-3520<br>
           <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
       </div>
       <div class="col-sm-3">
-        <h5 class="bold slab">Ohio</h5>
-        <p>North Royalton, OH<br>
+        <h5 class="bold slab" style="text-transform:uppercase;">Ohio</h5>
+        <p><strong>StoneAge Ohio</strong><br>
+          North Royalton, OH<br>
           +1 (440) 230-8080<br>
           <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
       </div>
       <div class="col-sm-3">
-        <a href="/contact"><img src="/assets/img/sa-rental-locations.png" alt="StoneAge rental locations" class="img-responsive" /></a>
+        <h5 class="bold slab" style="text-transform:uppercase;">Canada</h5>
+        <p><strong>Joe Johnson Equipment</strong><br>
+        +1 (780) 469-1584 | Edmonton, AB<br>
+          +1 (705) 733-7700 | Innisfil, ON<br>
+        <a href="http://www.jjei.com/">www.jjei.com</a></p>
       </div>
     </div>
   </div>
@@ -117,21 +124,40 @@ master-slider: yes
               <div class="row">
                 <div class="col-sm-4">
                   <h5 class="bold slab">Houston Area</h5>
-                  <p>Pasadena, TX<br>
+                  <p><strong>StoneAge Houston</strong><br>
+                    Pasadena, TX<br>
                     +1 (281) 888-5069<br>
                     <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
                 </div>
                 <div class="col-sm-4">
                   <h5 class="bold slab">Louisiana</h5>
-                  <p>Geismar, LA<br>
+                  <p><strong>StoneAge Louisiana</strong><br>
+                    Geismar, LA<br>
                     +1 (225) 508-3520<br>
                     <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
                 </div>
                 <div class="col-sm-4">
                   <h5 class="bold slab">Ohio</h5>
-                  <p>North Royalton, OH<br>
+                  <p><strong>StoneAge Ohio</strong><br>
+                    North Royalton, OH<br>
                     +1 (440) 230-8080<br>
                     <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4">
+                  <h5 class="bold slab">Canada</h5>
+                  <p><strong>Joe Johnson Equipment</strong><br>
+                  Edmonton, AB<br>
+                  +1 (780) 469-1584<br>
+                  <a href="http://www.jjei.com">www.jjei.com</a></p>
+                </div>
+                <div class="col-sm-4">
+                  <h5 class="bold slab">&nbsp;</h5>
+                  <p><strong>Joe Johnson Equipment</strong><br>
+                  Innisfil, ON<br>
+                  +1 (705) 733-7700<br>
+                  <a href="http://www.jjei.com">www.jjei.com</a></p>
                 </div>
               </div>
               <h3>Required Documents</h3>
@@ -364,6 +390,7 @@ master-slider: yes
     </div>
   
     <aside class="col-sm-3 col-sm-offset-1 cta right-sidebar padding-tb-30">
+      <a href="/contact"><img src="/assets/img/sa-rental-locations.png" alt="StoneAge rental locations" class="img-responsive" /></a>
       <div>
         <ul class="list-unstyled">
           <li><h3>Rental Documents</h3></li>
