--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@ contact-main: yes
           </div>
           <div class="col-sm-3 contact-method">
             <h3>Downhole Tools Orders</h3>
-            <p><a href="#downhole-tab" data-toggle="tab">Contact a dealer in your region</a> to purchase.</p>
+            <p><a href="#downhole-tab" data-toggle="tab">Purchase from StoneAge directly or contact a dealer in your region.</a></p>
           </div>
         </div>
       </div>
@@ -126,27 +126,37 @@ contact-main: yes
             <h2 class="bold">Tool Rentals</h2>
             <hr>
             <p><strong>Rent StoneAge’s industry leading tools and automated equipment.</strong><br>We are here to help you meet your rental service needs.</p>
-            <p>Contact any of our regional locations to rent StoneAge equipment – <em class="bold"> ask about purchase options.</em></p>
+            <p>Contact any of our rental locations to rent StoneAge equipment – <em class="bold"> ask about purchase options.</em></p>
             <p><a href="/rentals">Click here for more information.</a></p>
             <hr>
             <div class="row">
-              <div class="col-sm-4">
-                <h5 class="bold slab">Houston Area</h5>
-                <p>Pasadena, TX<br>
+              <div class="col-sm-3">
+                <h5 class="bold slab" style="text-transform:uppercase;">Houston Area</h5>
+                <p><strong>StoneAge Houston</strong><br>
+                  Pasadena, TX<br>
                   +1 (281) 888-5069<br>
                   <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
               </div>
-              <div class="col-sm-4">
-                <h5 class="bold slab">Louisiana</h5>
-                <p>Geismar, LA<br>
+              <div class="col-sm-3">
+                <h5 class="bold slab" style="text-transform:uppercase;">Louisiana</h5>
+                <p><strong>StoneAge Louisiana</strong><br>
+                  Geismar, LA<br>
                   +1 (225) 508-3520<br>
                   <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
               </div>
-              <div class="col-sm-4">
-                <h5 class="bold slab">Ohio</h5>
-                <p>North Royalton, OH<br>
+              <div class="col-sm-3">
+                <h5 class="bold slab" style="text-transform:uppercase;">Ohio</h5>
+                <p><strong>StoneAge Ohio</strong><br>
+                  North Royalton, OH<br>
                   +1 (440) 230-8080<br>
                   <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
+              </div>
+              <div class="col-sm-3">
+                <h5 class="bold slab" style="text-transform:uppercase;">Canada</h5>
+                <p><strong>Joe Johnson Equipment</strong><br>
+               +1 (780) 469-1584 Edmonton, AB<br>
+                +1 (705) 733-7700 Innisfil, ON<br>
+                <a href="http://www.jjei.com/">www.jjei.com</a></p>
               </div>
             </div>
             <div class="row padding-tb-30"><p><em>We ship rental equipment and support jobs throughout the continental US.</em></p></div>
