SKRL launch and misc updates

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -19,8 +19,11 @@
 <div id="fin-fan-train-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/9l7_2nttdV0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="skrl-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/byVrLdmewtI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="skr-trk-vid">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/BzoMuyJcjlc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/BzoMuyJcjlc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="skr-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/EcVIT-LdfYg?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
