--- a/loc-houston.html
+++ b/loc-houston.html
@@ -92,9 +92,15 @@ contact-houston: yes
         <div class="row">
           <div class="col-sm-6">
             <p><strong>Bill O'Briant</strong><br/>
-              Regional Sales Manager, Waterblast Division<br/>
+              Gulf Coast Regional Sales Manager<br/>
               Main: +1 (281) 888-5069<br/>
             <a href="mailto:bill.obriant@stoneagetools.com">bill.obriant@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Anne Brennan</strong><br/>
+              West Coast Regional Sales Manager<br/>
+              Main: +1 (281) 888-5069<br/>
+            <a href="mailto:anne.brennan@stoneagetools.com">anne.brennan@stoneagetools.com</a></p>
           </div>
         </div>
 
