--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ permalink: /
         <a data-target="#homeSlides" data-slide-to="5" id="/sewer-tools"><span>Sewer Lines</span></a>
         <a data-target="#homeSlides" data-slide-to="6" id="/downhole-tools"><span>Downhole</span></a>
       </div>
-      <input type="submit" class="btn" value="GO">
+<!--      <input type="submit" class="btn" value="GO">-->
     </form>
 
     <!-- Wrapper for slides -->
@@ -114,15 +114,6 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="https://canadianminingexpo.com" target="_blank"><img src="/assets/img/thumb/upcoming-event-ca-mining-2017.png" class="img-responsive"/ alt="Visit StoneAge at the Canadian Mining Expo 2017"></a>
-      <div class="caption">
-        <h4><a href="https://canadianminingexpo.com" target="_blank">Canadian Mining Expo<br><span class="small">May 31-June 1<br/>
-        Timmins, Ontario</span></a></h4>
-        <p><strong>Visit Us in Booths 0-04 &amp; 0-05</strong></p>
-        <p>Visit StoneAge at <a href="http://www.jjei.com/" target="_blank">Joe Johnson Equipment</a>'s outdoor booths for tool demos!</p>
-      </div>
-    </div>
-    <div class="row" style="padding-top:20px;">
       <a href="http://www.fuelethanolworkshop.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW_2017_02.JPG" class="img-responsive"/ alt="Visit StoneAge at FEW Show 2017"></a>
       <div class="caption">
         <h4><a href="http://www.fuelethanolworkshop.com/" target="_blank">International Fuel Ethanol Workshop &amp; Expo<br><span class="small">June 19-21<br/>
