SKRL public launch

--- a/waterblast-automation/striker-lightweight.html
+++ b/waterblast-automation/striker-lightweight.html
@@ -164,7 +164,7 @@ master-slider: yes
               <li>SKR 100 upper assembly</li>
               <li>Control box</li>
               <li>Shotgun nozzle package</li>
-              <li><br>Optional foot pedal and dump valve</li>
+              <li><br><em>Optional: foot pedal and dump valve</em></li>
             </ul>
         </aside>
       </section>
@@ -182,6 +182,7 @@ master-slider: yes
             <h3>Documentation</h3>
             <li><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Data Sheet</a></li>
             <li><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Tool Talk</a></li>
+<!--            <li><a href="https://rise.articulate.com/share/rNzIsFHC_Z1xT-JHwgf9U22HLHAvINT9" target="_blank"><i class="fa fa-graduation-cap"></i> &nbsp;Lightweight Striker Product Training</a></li>-->
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
