--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@ permalink: /
     <div class="col-md-9 padding-right-60">
       <div class="section-heading">
         <h2>Features &amp; Promotions</h2>
-      </div>
+      </div>   
       <!-- Row 1 -->
+      <div class="row margin-bottom-20">
+        <a href="/lightweight-striker"><img src="/assets/img/features/skrl_available.png" alt="Lightweight Striker remote shotgun cleaning" class="img-responsive"/></a>
+      </div> 
+      <!-- Row 2 -->
       <div class="row margin-bottom-20">
         <a href="/navigator"><img src="/assets/img/features/new_navigator.png" alt="Navigator process pipe cleaning" class="img-responsive"/></a>
       </div>  
-      <!-- Row 2 -->
-      <div class="row margin-bottom-20">
-        <a href="/abx-3l"><img src="/assets/img/features/abx-3l_available_02.png" alt="AutoBox ABX-3L heat exchanger cleaning" class="img-responsive"/></a>
-      </div>     
     </div>
     <!-- End Features/Promos -->
 
@@ -114,12 +114,24 @@ permalink: /
       <h2>Events</h2>
     </div>
     <div class="row">
-      <a href="http://www.fuelethanolworkshop.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW_2017_02.JPG" class="img-responsive"/ alt="Visit StoneAge at FEW Show 2017"></a>
+      <a href="http://www.tristateseminar.com/" target="_blank"><img src="/assets/img/thumb/upcoming_events_tri-state_2017.JPG" class="img-responsive"/ alt="Visit StoneAge at Tri-State 2017"></a>
       <div class="caption">
-        <h4><a href="http://www.fuelethanolworkshop.com/" target="_blank">International Fuel Ethanol Workshop &amp; Expo<br><span class="small">June 19-21<br/>
-        Minneapolis, Minnesota</span></a></h4>
+        <h4><a href="http://www.tristateseminar.com/" target="_blank">33rd Annual<br>Tri-State Seminar<br><span class="small">September 26-28<br/>
+        South Point Hotel &amp; Casino<br>
+          Las Vegas, NV</span></a></h4>
+<!--
         <p><strong>Visit Us in Booth 301</strong></p>
         <p>Now in its 33rd year, the FEW provides the ethanol industry with cutting-edge content and unparalleled networking opportunities in a dynamic business-to-business environment.</p>
+-->
+      </div>
+    </div>
+    
+    <div class="row" style="padding-top:15px;">
+      <a href="http://weftec.org/" target="_blank"><img src="/assets/img/thumb/upcoming-events-weftec-2017.jpg" class="img-responsive"/ alt="Visit StoneAge at Weftec 2017"></a>
+      <div class="caption">
+        <h4><a href="http://weftec.org/" target="_blank">WEFTEC 2017<br><span class="small">September 30 - October 4<br/>
+          McCormick Place<br>
+          Chicago, IL</span></a></h4>
       </div>
     </div>
   </div>
